UI updated, bugs fixed
hide button added.
in previous version  if we flag and then unflag a cell, the cell color didn't change and I fixed this small bug.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<div class="time"></div>
 		<div class="flags-count">0</div>
 	</div>
+	<button class="hide-btn">^</button>
 
 
 	<script type="text/javascript" src="scripts/script.js"></script>
